--- a/springPractice/cashcard/build.gradle
+++ b/springPractice/cashcard/build.gradle
@@ -33,13 +33,13 @@ tasks.named('test') {
 test {
 	// testコマンドを実行した時のログの内容を設定
 	testLogging {
-			events "passed", "skipped", "failed" //, "standardOut", "standardError"
+			events "passed", "skipped", "failed", "standardOut", "standardError"
 
 			showExceptions true
 			exceptionFormat "full"
 			showCauses true
 			showStackTraces true
 
-			// showStandardStreams = true
+			showStandardStreams = true
 	}
 }
