--- a/springPractice/lab/36-mvc/build.gradle
+++ b/springPractice/lab/36-mvc/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     implementation project(':01-rewards-db')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    //Javaファイルやリソースを変更するたびに、アプリケーションの自動再起動を可能にする。
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.springframework.boot:spring-boot-starter-mustache'
 }
